--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,11 +1,9 @@
 [package]
 name = "blazecast"
 version = "0.1.0"
-description = "A Tauri App"
+description = "A Windows launcher with app indexing"
 authors = ["you"]
 edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [build-dependencies]
 tauri-build = { version = "1", features = [] }
@@ -15,16 +13,6 @@ tauri = { version = "1", features = [ "global-shortcut-all", "shell-open", "syst
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 walkdir = "2.3"
-windows = { version = "0.48", features = [
-    "Win32_Foundation",
-    "Win32_UI_WindowsAndMessaging",
-    "Win32_UI_Shell",
-    "Win32_System_Com",
-    "Win32_Graphics_Gdi",
-    "Win32_Graphics_Imaging",
-    "Win32_System_Com_StructuredStorage",
-    "implement"
-] }
 uuid = { version = "1.4", features = ["v4"] }
 base64 = "0.21"
 
