--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -15,7 +15,7 @@ serde_json = "1"
 walkdir = "2.3"
 uuid = { version = "1.4", features = ["v4"] }
 base64 = "0.21"
-winreg = "0.11"  # Added for registry operations
+winreg = "0.11"
 
 [features]
 # This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
