--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -16,6 +16,7 @@ walkdir = "2.3"
 uuid = { version = "1.4", features = ["v4"] }
 base64 = "0.21"
 winreg = "0.11"
+winapi = { version = "0.3.9", features = ["shellapi", "winuser"] }
 
 [features]
 # This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
