--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -9,7 +9,7 @@ edition = "2021"
 tauri-build = { version = "1", features = [] }
 
 [dependencies]
-tauri = { version = "1", features = [ "global-shortcut-all", "shell-open", "system-tray", "global-shortcut", "window-hide", "window-show", "window-close", "window-set-focus"] }
+tauri = { version = "1", features = [ "global-shortcut-all", "shell-open", "system-tray", "global-shortcut", "window-hide", "window-show", "window-close", "window-set-focus", "clipboard-all"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 walkdir = "2.3"
@@ -17,6 +17,7 @@ uuid = { version = "1.4", features = ["v4"] }
 base64 = "0.21"
 winreg = "0.11"
 winapi = { version = "0.3.9", features = ["shellapi", "winuser"] }
+arboard = "3.5.0"
 
 [features]
 # This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
