--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -18,6 +18,8 @@ base64 = "0.21"
 winreg = "0.11"
 winapi = { version = "0.3.9", features = ["shellapi", "winuser"] }
 arboard = "3.5.0"
+aes-gcm = "0.10.1"
+rand = "0.8.5"
 
 [features]
 # This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
