--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -13,13 +13,15 @@ tauri = { version = "1", features = [ "global-shortcut-all", "shell-open", "syst
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 walkdir = "2.3"
-uuid = { version = "1.4", features = ["v4"] }
+uuid = { version = "1.4", features = ["v4", "serde"] }
 base64 = "0.21"
 winreg = "0.11"
 winapi = { version = "0.3.9", features = ["shellapi", "winuser"] }
 arboard = "3.5.0"
 aes-gcm = "0.10.1"
 rand = "0.8.5"
+chrono = "0.4"
+dirs = "=1.0.5"
 
 [features]
 # This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
