--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -22,6 +22,8 @@ aes-gcm = "0.10.1"
 rand = "0.8.5"
 chrono = "0.4"
 dirs = "=1.0.5"
+url = "2.4.1"
+which = "4.2"
 
 [features]
 # This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
