--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tauri-apps/api": "^1.6.0",
     "@tauri-apps/plugin-clipboard-manager": "^2.2.2",
     "lucide-react": "^0.487.0",
+    "mathjs": "^14.4.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
