--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -16,7 +16,7 @@ walkdir = "2.3"
 uuid = { version = "1.4", features = ["v4", "serde"] }
 base64 = "0.21"
 winreg = "0.11"
-winapi = { version = "0.3.9", features = ["shellapi", "winuser"] }
+winapi = { version = "0.3.9", features = ["shellapi", "winuser", "dpapi", "wincrypt", "winbase"] }
 arboard = "3.5.0"
 aes-gcm = "0.10.1"
 rand = "0.8.5"
