--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -19,6 +19,8 @@ image = "0.24.6"
 winreg = "0.11"
 winapi = { version = "0.3.9", features = ["shellapi", "winuser", "dpapi", "wincrypt", "winbase"] }
 arboard = "3.5.0"
+sha2 = "0.10" 
+urlencoding = "2.1.0"
 aes-gcm = "0.10.1"
 rand = "0.8.5"
 chrono = "0.4"
